fix: :lipstick: add top spacing to center element

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -1,6 +1,7 @@
 .features {
   display: flex;
   align-items: center;
+  margin-top: 2.6rem;
   padding: 2rem 0;
   width: 100%;
 }
